# slack-leaver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
