[package]
name = "slack-leaver"
authors = ["Tristan Leo <vileda@vileda.cc>"]
homepage = "https://github.com/derveloper/slack-leaver"
version = "2022.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.133"
serde_json = "1.0.74"
rpassword = "5.0"
clap = { version = "3.0.5", features = ["derive"] }
